--- a/API-THEye.yml
+++ b/API-THEye.yml
@@ -721,7 +721,7 @@ components:
           description: "File required"
         status:
           $ref: '#/components/schemas/status'
-    device-certificate: 
+    device-log-certificate: 
       type: object
       properties:
         start_date:
@@ -1677,7 +1677,7 @@ paths:
             application/json:
               schema:
                 $ref : '#/components/schemas/status-response' 
-  /devices/concatenation/{nonce-id}/:
+  /devices/{nonce-id}/status/:
     get:
       description: Retrieve concatenation file creation task state
       parameters:
@@ -1709,7 +1709,7 @@ paths:
             application/json:
               schema:
                 $ref : '#/components/schemas/status-response' 
-  /devices/concatenation/{nonce-id}/file/:
+  /devices/{nonce-id}/file/:
     get:
       description: Retrieve concatenation file (status must be finished=true)
       parameters:
@@ -1732,7 +1732,10 @@ paths:
           content: 
             text/csv:
               schema:
-                format: file                
+                format: file
+            application/pdf:
+              schema:
+                format: file            
         '401':
           description: Unauthorized.
         '403':
@@ -1831,7 +1834,7 @@ paths:
             application/json:
               schema:
                 $ref : '#/components/schemas/status-response' 
-  /devices/{device-id}/certificate/:
+  /devices/{device-id}/logs/{start-time-id}/certificate/:
     post:
       description: Post certificate generation request. 
       parameters:
@@ -1844,13 +1847,19 @@ paths:
             maxLength: 12 
             minLength: 12 
             example: 0123456789AB
+        - name: start-time-id 
+          in: path
+          required: true
+          schema:
+            type: integer 
+            example: 314
       requestBody:
         description: Encrypted device info 
         required: true
         content:
           application/json:
             schema:
-              $ref : '#/components/schemas/device-certificate'
+              $ref : '#/components/schemas/device-log-certificate'
       responses:
         '200': 
           description: OK
@@ -1860,92 +1869,24 @@ paths:
                 $ref : '#/components/schemas/task-status'                   
         '401':
           description: Unauthorized.
-        '403':
-          description: Forbidden. 
+        '400':
+          description: Bad request. 
           content:
             application/json:
               schema:
-                $ref : '#/components/schemas/status-response'  
-  /devices/{device-id}/certificate/{nonce-id}/: #do the same for certificate
-    get:
-      description: Retrieve certificate creation task state
-      parameters:
-        - name: device-id
-          in: path
-          required: true
-          schema:
-            type: string 
-            format: base16
-            maxLength: 12 
-            minLength: 12 
-            example: 0123456789AB
-        - name: nonce-id
-          in: path
-          required: true
-          schema:
-            type: string 
-            format: base16
-            maxLength: 24 
-            minLength: 24 
-            example: 00112233445566778899AABB
-            readOnly: true
-      security:
-        - theye_oauth:
-          - read 
-      responses:
-        '200': 
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref : '#/components/schemas/task-status'                   
-        '401':
-          description: Unauthorized.
+                $ref : '#/components/schemas/status-response' 
         '403':
           description: Forbidden. 
           content:
             application/json:
               schema:
                 $ref : '#/components/schemas/status-response' 
-  /devices/concatenation/{nonce-id}/file/: #do the same for certificate
-    get:
-      description: Retrieve certificate (status must be finished=true)
-      parameters:
-        - name: device-id
-          in: path
-          required: true
-          schema:
-            type: string 
-            format: base16
-            maxLength: 12 
-            minLength: 12 
-            example: 0123456789AB
-        - name: nonce-id
-          in: path
-          required: true
-          schema:
-            type: string 
-            format: base16
-            maxLength: 24 
-            minLength: 24 
-            example: 00112233445566778899AABB
-            readOnly: true
-      security:
-        - theye_oauth:
-          - read 
-      responses:
-        '200': 
-          description: OK
-          content: 
-            text/csv:
-              schema:
-                format: file                
-        '401':
-          description: Unauthorized.
-        '403':
-          description: Forbidden. 
         '404':
-          description: Not found (may be a bad nonce id)
+          description: Not found. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response'
   /devices/{device-id}/check-synchronization:
     put:
       description: Check wheter the device is synchronized with the server or not.
@@ -2331,7 +2272,7 @@ paths:
             maxLength: 12 
             minLength: 12 
             example: 0123456789AB 
-        - name: start-tim-id 
+        - name: start-time-id 
           in: path
           required: true
           schema:
