--- a/API-THEye.yml
+++ b/API-THEye.yml
@@ -1039,27 +1039,37 @@ components:
           type: string
           format: hex48 
           example: 0123456789AB 
+          readOnly: true
         time_interval:
           type: integer
           description: Interval between successive points in seconds.
+          readOnly: true
         start_time_id:
           type: number 
           example: 314 
+          readOnly: true
         name:
           type: string
           example: 'Packet A delivery.' 
+          readOnly: false
         start_date:
           type: integer
           format: Time in POSIX 
           deprecated: true
+          readOnly: true
         end_date:
           type: integer
           format: Time in POSIX 
           deprecated: true
+          readOnly: true
         time_corrections:
           type: array
           items: 
             $ref: '#/components/schemas/log_time_correction'
+        is_active:
+          type: boolean
+          example: true 
+          readOnly: false
     log_time_correction:
       type: object
       properties:
@@ -2460,6 +2470,61 @@ paths:
             application/json:
               schema:
                 $ref : '#/components/schemas/status-response' 
+    put:
+      description: Put Log.
+      parameters:
+        - name: device-id
+          in: path
+          required: true
+          schema:
+            type: string 
+            format: base16
+            maxLength: 12 
+            minLength: 12 
+            example: 0123456789AB 
+        - name: start-time-id 
+          in: path
+          required: true
+          schema:
+            type: integer 
+            example: 314
+      requestBody:
+        description: Data of the log to update
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref : '#/components/schemas/log' 
+      security:
+        - theye_oauth:
+          - write 
+      responses:
+        '200': 
+          description: Ok, log updated 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/log' 
+        '401':
+          description: Unauthorized. 
+        '400':
+          description: Bad request. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response' 
+        '403':
+          description: Forbidden. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response' 
+        '404':
+          description: Not found. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response'
   /devices/{device-id}/own:
      put:
       description: Own the device.
