--- a/API-THEye.yml
+++ b/API-THEye.yml
@@ -2316,6 +2316,39 @@ paths:
             application/json:
               schema:
                 $ref : '#/components/schemas/status-response' 
+  /devices/{device-id}/set-all-logs-viewed/:
+    put:
+      description: Set all logs of a single device as viewed by a user.
+      security:
+        - theye_oauth:
+          - write 
+      responses:
+        '200': 
+          description: Ok, logs updated 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/logs'
+        '401':
+          description: Unauthorized. 
+        '400':
+          description: Bad request. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response' 
+        '403':
+          description: Forbidden. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response' 
+        '404':
+          description: Not found. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response' 
   /devices/{device-id}/logs/:
     get:
       description: Get the list of logs of the device
